--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -18,7 +18,7 @@ Config
   border-radius: 3px;
   align-items: center;
   justify-content: space-evenly;
-  width: 10.5rem;
+  width: 11.5rem;
   box-shadow: 0 7px 10px rgba(0, 0, 0, 0.3);
 }
 
@@ -278,7 +278,6 @@ img {
 
 /* About Page (Hero) */
 .about {
-  border: 1px solid green;
   position: relative;
   width: 100%;
   padding: 6rem 0;
@@ -288,14 +287,12 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid blue;
   /* About Page Text */
 }
 
 .about-content article {
-  border: 1px solid red;
   color: #fff;
-  width: 100%;
+  width: 90%;
 }
 
 .about-content article h1 {
@@ -306,16 +303,16 @@ img {
   line-height: 1.75;
   font-size: 1.25rem;
   padding: 1.75rem 0 3rem 0;
+  width: 90%;
 }
 
 .about-content figure {
-  border: 1px solid red;
   width: 80%;
-  height: 50%;
   margin: 6rem 0;
 }
 
 .about-content figure img {
+  mix-blend-mode: darken;
   width: 100%;
   height: 100%;
   object-fit: contain;
@@ -324,10 +321,12 @@ img {
 #hero-bg {
   position: absolute;
   z-index: -1;
-  top: 0;
-  width: 100%;
-  height: 100%;
+  top: -15%;
+  left: -10%;
+  width: 120%;
+  height: 110%;
   background: linear-gradient(35deg, #11cdef, #1171ef);
+  transform: rotateZ(-3deg);
 }
 
 #hero-bg span {
@@ -339,32 +338,32 @@ img {
 
 #hero-bg span:nth-child(1) {
   background-color: rgba(255, 255, 255, 0.1);
-  left: -4%;
+  left: 20%;
   bottom: auto;
 }
 
 #hero-bg span:nth-child(2) {
   background-color: rgba(255, 255, 255, 0.1);
-  right: 4%;
-  top: 10%;
+  right: 14%;
+  top: 20%;
 }
 
 #hero-bg span:nth-child(3) {
   background-color: rgba(255, 255, 255, 0.3);
-  top: 280px;
-  right: 5.6%;
+  top: 380px;
+  right: 7%;
 }
 
 #hero-bg span:nth-child(4) {
   background-color: rgba(255, 255, 255, 0.15);
-  top: 320px;
-  right: 7%;
+  top: 430px;
+  right: 9%;
 }
 
 #hero-bg span:nth-child(5) {
   background-color: rgba(255, 255, 255, 0.05);
   top: 38%;
-  left: 1%;
+  left: 10%;
   right: auto;
 }
 
@@ -372,27 +371,27 @@ img {
   background-color: rgba(255, 255, 255, 0.15);
   width: 200px;
   height: 200px;
-  top: 44%;
+  top: 54%;
   left: 10%;
   right: auto;
 }
 
 #hero-bg span:nth-child(7) {
-  background-color: rgba(255, 255, 255, 0.04);
-  bottom: 50%;
+  background-color: rgba(255, 255, 255, 0.05);
+  bottom: 60%;
   right: 36%;
 }
 
 #hero-bg span:nth-child(8) {
   background-color: rgba(255, 255, 255, 0.2);
   bottom: 70px;
-  right: 2%;
+  right: 20%;
 }
 
 #hero-bg span:nth-child(9) {
   background-color: rgba(255, 255, 255, 0.1);
   bottom: 1%;
-  right: 2%;
+  right: 20%;
 }
 
 @media (min-width: 992px) {
@@ -400,12 +399,14 @@ img {
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
+    margin-bottom: 12rem;
   }
   .about-content article {
-    width: 45%;
+    width: 50%;
   }
   .about-content figure {
-    width: 50%;
+    width: 45%;
+    margin: auto 0;
   }
 }
 
