--- a/src/styles/scss/containers/about/_about.scss
+++ b/src/styles/scss/containers/about/_about.scss
@@ -1,6 +1,5 @@
 /* About Page (Hero) */
 .about {
-  border: 1px solid green;
   position: relative;
   width: 100%;
   padding: 6rem 0;
@@ -10,12 +9,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid blue;
     /* About Page Text */
     article {
-      border: 1px solid red;
       color: #fff;
-      width: 100%;
+      width: 90%;
       h1 {
         font-size: 2rem;
       }
@@ -23,6 +20,7 @@
         line-height: 1.75;
         font-size: 1.25rem;
         padding: 1.75rem 0 3rem 0;
+        width: 90%;
       }
       .socials {
         #colored-socials {
@@ -34,11 +32,10 @@
       }
     }
     figure {
-      border: 1px solid red;
       width: 80%;
-      height: 50%;
       margin: 6rem 0;
       img {
+        mix-blend-mode: darken;
         width: 100%;
         height: 100%;
         object-fit: contain;
@@ -46,6 +43,7 @@
     }
   }
 }
+
 @import "./partials/hero-bg";
 
 @media (min-width: 992px) {
@@ -53,12 +51,14 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
+    margin-bottom: 12rem;
 
     article {
-      width: 45%;
+      width: 50%;
     }
     figure {
-      width: 50%;
+      width: 45%;
+      margin: auto 0;
     }
   }
 }
