--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -3,7 +3,7 @@ Config
 **********************/
 /* Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Waterfall&display=swap");
-.navbar-content, .about-content {
+.navbar-content, .about-content, .skills-content {
   width: 94%;
   max-width: 65rem;
   margin: 0 auto;
@@ -33,8 +33,9 @@ Config
 
 .about-content article .socials #colored-socials, .pages .contact .socials #colored-socials {
   display: flex;
-  width: 20rem;
+  width: 12rem;
   color: white;
+  justify-content: space-around;
 }
 
 .about-content article .socials #colored-socials a, .pages .contact .socials #colored-socials a {
@@ -101,6 +102,7 @@ body {
   height: 100%;
   scroll-behavior: smooth;
   font-family: sans-serif;
+  overflow-x: hidden;
 }
 
 a {
@@ -175,19 +177,7 @@ img {
   font-size: 1.8rem;
 }
 
-@media (min-width: 992px) {
-  /* Navbar responsive */
-  #open-menu-btn {
-    display: none;
-  }
-  .navbar-dropdown-open {
-    display: none;
-  }
-  .navbar .socials {
-    display: flex;
-  }
-}
-
+/* Dropdown menu < 992px */
 .navbar-dropdown {
   width: 93vw;
   margin: 0.7rem;
@@ -265,6 +255,19 @@ img {
   box-shadow: 0 50px 100px rgba(50, 50, 93, 0.1), 0 15px 35px rgba(50, 50, 93, 0.15), 0 5px 15px rgba(0, 0, 0, 0.1);
   animation: show-navbar-collapse 0.2s ease forwards;
   z-index: 9;
+}
+
+@media (min-width: 992px) {
+  /* Navbar responsive */
+  #open-menu-btn {
+    display: none;
+  }
+  .navbar-dropdown-open {
+    display: none;
+  }
+  .navbar .socials {
+    display: flex;
+  }
 }
 
 #scrollTop {
@@ -410,6 +413,98 @@ img {
   }
 }
 
+.skills {
+  margin: 10rem auto;
+}
+
+.skills-content {
+  margin: 5rem auto;
+}
+
+.skills-content header {
+  text-align: center;
+  color: #32325d;
+  font-size: 1.2rem;
+}
+
+.skills-content header h2 {
+  font-size: 2.5rem;
+  font-weight: 100;
+  margin-bottom: 1rem;
+}
+
+.skills-content div:first-of-type {
+  margin: 3rem auto;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.skills-content figure {
+  width: 70%;
+  max-width: 30rem;
+  margin: auto;
+}
+
+.skills-content figure img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.skills-content .lists-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.skills-content ul:first-of-type {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.skills-content ul:first-of-type li {
+  border-radius: 50%;
+  width: 3.5rem;
+  height: 3.5rem;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  padding: 0.8rem;
+  margin: 0 0.1rem;
+}
+
+.skills-content ul:first-of-type li img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.skills-content ul:last-child {
+  margin: 5rem auto;
+  line-height: 2.5;
+  color: #525f7f;
+}
+
+@media (min-width: 992px) {
+  .skills-content div:first-of-type {
+    flex-direction: row;
+    align-items: center;
+  }
+  .skills-content div:first-of-type figure {
+    width: 50%;
+  }
+  .skills-content div:first-of-type .lists-container {
+    padding: 0;
+    height: 100%;
+    width: 50%;
+  }
+  .skills-content div:first-of-type .lists-container ul:first-of-type {
+    margin-bottom: 3rem;
+  }
+  .skills-content div:first-of-type .lists-container ul:first-of-type li {
+    width: 4rem;
+    height: 4rem;
+  }
+}
+
 @keyframes show-navbar-collapse {
   0% {
     opacity: 0;
@@ -432,34 +527,6 @@ img {
     opacity: 0;
     transform: scale(0.95);
   }
-}
-
-.pages .skills {
-  border: 1px solid green;
-  margin: 5px 0;
-}
-
-.pages .skills-content {
-  border: 1px solid blue;
-}
-
-.pages .skills-content header {
-  border: 1px solid red;
-}
-
-.pages .skills-content figure {
-  border: 1px solid red;
-}
-
-.pages .skills-content ul {
-  border: 1px solid red;
-  /*  */
-  /*  */
-}
-
-.pages .skills-content ul img {
-  width: 50px;
-  height: 50px;
 }
 
 .pages .projects {
