--- a/src/styles/scss/containers/navigation/_navigation.scss
+++ b/src/styles/scss/containers/navigation/_navigation.scss
@@ -10,7 +10,7 @@
 
   &-content {
     @extend %container-max-width;
-    width: 80vw;
+    // width: 80vw;
     margin: auto;
     height: 100%;
     display: flex;
