--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -4,8 +4,8 @@ Config
 /* Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Waterfall&display=swap");
 .navbar-content, .about-content, .skills-content {
-  width: 94%;
-  max-width: 65rem;
+  width: 92%;
+  max-width: 35rem;
   margin: 0 auto;
 }
 
@@ -88,6 +88,27 @@ Config
   font-size: 1.2rem;
 }
 
+@media (min-width: 768px) {
+  .navbar-content, .about-content, .skills-content {
+    max-width: 50rem;
+  }
+  .about .about-content article {
+    max-width: 45rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .navbar-content, .about-content, .skills-content {
+    max-width: 55rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .navbar-content, .about-content, .skills-content {
+    max-width: 60rem;
+  }
+}
+
 /**********************
 Main CSS (General tags)
 **********************/
@@ -137,7 +158,6 @@ img {
 }
 
 .navbar-content {
-  width: 80vw;
   margin: auto;
   height: 100%;
   display: flex;
@@ -287,15 +307,11 @@ img {
 }
 
 .about-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   /* About Page Text */
 }
 
 .about-content article {
   color: #fff;
-  width: 90%;
 }
 
 .about-content article h1 {
@@ -306,16 +322,31 @@ img {
   line-height: 1.75;
   font-size: 1.25rem;
   padding: 1.75rem 0 3rem 0;
-  width: 90%;
+  width: 100%;
 }
 
 .about-content figure {
-  width: 80%;
-  margin: 6rem 0;
+  width: 75%;
+  max-width: 40rem;
+  margin: 8rem auto;
+  position: relative;
+}
+
+.about-content figure::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 20%;
+  right: 25px;
+  left: 0;
+  margin: auto;
+  width: 25%;
+  height: 35%;
+  background-color: #020f57;
+  z-index: -1;
 }
 
 .about-content figure img {
-  mix-blend-mode: darken;
   width: 100%;
   height: 100%;
   object-fit: contain;
@@ -399,7 +430,7 @@ img {
 
 @media (min-width: 992px) {
   .about-content {
-    flex-direction: row;
+    display: flex;
     justify-content: space-between;
     align-items: flex-start;
     margin-bottom: 12rem;
