--- a/src/styles/scss/containers/about/_about.scss
+++ b/src/styles/scss/containers/about/_about.scss
@@ -6,13 +6,12 @@
 
   &-content {
     @extend %container-max-width;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
     /* About Page Text */
     article {
       color: #fff;
-      width: 90%;
       h1 {
         font-size: 2rem;
       }
@@ -20,7 +19,7 @@
         line-height: 1.75;
         font-size: 1.25rem;
         padding: 1.75rem 0 3rem 0;
-        width: 90%;
+        width: 100%;
       }
       .socials {
         #colored-socials {
@@ -32,10 +31,24 @@
       }
     }
     figure {
-      width: 80%;
-      margin: 6rem 0;
+      width: 75%;
+      max-width: 40rem;
+      margin: 8rem auto;
+      position: relative;
+      &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 20%;
+        right: 25px;
+        left: 0;
+        margin: auto;
+        width: 25%;
+        height: 35%;
+        background-color: rgb(2, 15, 87);
+        z-index: -1;
+      }
       img {
-        mix-blend-mode: darken;
         width: 100%;
         height: 100%;
         object-fit: contain;
@@ -48,7 +61,7 @@
 
 @media (min-width: 992px) {
   .about-content {
-    flex-direction: row;
+    display: flex;
     justify-content: space-between;
     align-items: flex-start;
     margin-bottom: 12rem;
