--- a/src/styles/scss/containers/about/_about.scss
+++ b/src/styles/scss/containers/about/_about.scss
@@ -39,13 +39,13 @@
         content: "";
         position: absolute;
         top: 0;
-        bottom: 20%;
+        bottom: 28%;
         right: 25px;
         left: 0;
         margin: auto;
         width: 25%;
-        height: 35%;
-        background-color: rgb(2, 15, 87);
+        height: 38%;
+        background-color: #ddd;
         z-index: -1;
       }
       img {
