--- a/src/styles/scss/containers/skills/_skills.scss
+++ b/src/styles/scss/containers/skills/_skills.scss
@@ -48,14 +48,19 @@
       //Skill Icon
       li {
         border-radius: 50%;
-        width: 3.5rem;
-        height: 3.5rem;
+        width: 13%;
+        max-width: 3.5rem;
+        max-height: 3.5rem;
+        // height: ;
         box-shadow: 0 5px 10px rgba($color: #000000, $alpha: 0.2);
-        padding: 0.8rem;
+        // padding: 0.4rem;
         margin: 0 0.1rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         img {
-          width: 100%;
-          height: 100%;
+          width: 75%;
+          height: 75%;
           object-fit: contain;
         }
       }
