--- a/src/styles/scss/containers/skills/_skills.scss
+++ b/src/styles/scss/containers/skills/_skills.scss
@@ -70,6 +70,14 @@
       margin: 5rem auto;
       line-height: 2.5;
       color: #525f7f;
+
+      li {
+        display: flex;
+        align-items: center;
+        span {
+          margin-right: 0.5rem;
+        }
+      }
     }
   }
 }
