--- a/src/styles/scss/containers/skills/_skills.scss
+++ b/src/styles/scss/containers/skills/_skills.scss
@@ -67,15 +67,16 @@
     }
     //More info skills
     ul:last-child {
-      margin: 5rem auto;
-      line-height: 2.5;
+      margin: 3.5rem auto;
       color: #525f7f;
 
       li {
         display: flex;
         align-items: center;
+        margin: 1.5rem 0;
         span {
-          margin-right: 0.5rem;
+          margin-right: 1rem;
+          font-size: 1.4rem;
         }
       }
     }
