--- a/src/styles/scss/containers/navigation/_navigation.scss
+++ b/src/styles/scss/containers/navigation/_navigation.scss
@@ -1,3 +1,6 @@
+.nav-container {
+  width: 100%;
+}
 .navbar {
   width: 100%;
   position: absolute;
@@ -8,28 +11,26 @@
   height: 5rem;
   color: #fff;
 
-  &-content {
-    @extend %container-max-width;
-    // width: 80vw;
-    margin: auto;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    h3 {
-      font-family: $ff-signature;
-      font-weight: 100;
-      font-size: 2.5rem;
-      width: 90%;
-    }
-  }
-
   //Navbar After Scroll Threshold (150px)
-  &-fixed {
-    position: fixed;
-    width: 100%;
-    background-color: #172b4d;
-    z-index: 7;
+}
+.navbar-fixed {
+  position: fixed;
+  width: 100%;
+  background-color: #172b4d;
+  z-index: 7;
+}
+
+.navbar-content {
+  @extend %container-max-width;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  h3 {
+    font-family: $ff-signature;
+    font-weight: 100;
+    font-size: 2.5rem;
+    width: 90%;
   }
 }
 
