--- a/src/styles/scss/_config.scss
+++ b/src/styles/scss/_config.scss
@@ -109,7 +109,11 @@ $ff-signature: "Waterfall", cursive;
   box-shadow: 0 3px 10px rgba($color: #000000, $alpha: 0.3);
 }
 %card-shadow {
-  box-shadow: 0 3px 10px rgba($color: #000000, $alpha: 0.5);
+  box-shadow: 0 3px 10px rgba($color: #000000, $alpha: 0.3);
+  transition: box-shadow 0.15s ease;
+}
+%card-shadow-hover {
+  box-shadow: 0 5px 15px rgba($color: #000000, $alpha: 0.7);
 }
 @mixin flex-center {
   display: flex;
