Finish style education

--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -58,6 +58,7 @@ img {
 @import "./containers/about/about";
 @import "./containers/skills/skills";
 @import "./containers/projects/projects";
+@import "./containers/education/education";
 
 @keyframes show-navbar-collapse {
   0% {
@@ -85,29 +86,7 @@ img {
 
 .pages {
   overflow: hidden;
-  .education {
-    border: 1px solid green;
-    margin: 10rem 0;
 
-    &-content {
-      @extend %container-max-width;
-      @extend %section-header;
-      border: 1px solid blue;
-
-      header {
-        border: 1px solid red;
-        color: #11cdef;
-      }
-      .education-container {
-        border: 1px solid red;
-        // display: flex;
-        article {
-          width: 33%;
-          border: 1px solid orange;
-        }
-      }
-    }
-  }
   .contact {
     border: 1px solid green;
     margin: 5px 0;
