--- a/src/styles/scss/_config.scss
+++ b/src/styles/scss/_config.scss
@@ -13,9 +13,10 @@ $ff-signature: "Waterfall", cursive;
 }
 %section-header {
   header {
+    width: 80%;
     display: flex;
     align-items: center;
-    margin: 1rem 0;
+    margin: 1rem auto;
     span {
       background-color: #fff;
       border-radius: 50%;
