--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -123,7 +123,7 @@ Config
 }
 
 .project-card:hover {
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.7);
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.6);
 }
 
 @media (min-width: 768px) {
@@ -616,7 +616,7 @@ img {
 
 .project-card-info {
   color: #32325d;
-  padding: 0.5rem;
+  padding: 0.7rem;
 }
 
 .project-card-info h3 {
@@ -652,7 +652,7 @@ img {
 }
 
 .project-card #btn-container {
-  padding: 0.3rem 0.4rem;
+  padding: 0.4rem;
   display: flex;
   column-gap: 0.5rem;
 }
@@ -826,10 +826,15 @@ img {
 }
 
 .education-card {
-  margin: 2rem 2rem;
+  margin: 2rem 1rem;
   max-width: 30rem;
-  padding: 2rem 3rem;
+  padding: 1.5rem 1.5rem;
   color: #525f7f;
+  transition: transform 0.05s ease;
+}
+
+.education-card:hover {
+  transform: translateY(-20px);
 }
 
 .education-card h3 {
@@ -871,7 +876,8 @@ img {
 @media (min-width: 768px) {
   .education-card {
     max-width: none;
-    width: 60rem;
+    width: 45rem;
+    padding: 2rem 3rem;
   }
 }
 
